--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "Another Markdown Editor or AME",
   "main": "main.js",
   "scripts": {
-    "start": "./node_modules/.bin/electron ."
+    "clean": "rm -rf ./node_modules ./dist",
+    "start": "./node_modules/.bin/electron .",
+    "package": "npm-run-all package:*",
+    "package:mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=dist --icon=src/icon/app",
+    "package:win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --prune=true --out=dist --icon=src/icon/app",
+    "package:linux": "electron-packager . --overwrite --platform=linux --arch=x64 --prune=true --out=dist --icon=src/icon/app"
   },
   "repository": {
     "type": "git",
@@ -16,7 +21,10 @@
     "Electron",
     "SimpleMDE"
   ],
-  "author": "Peter Hunt <naseberry@users.noreply.github.com>",
+  "author": {
+    "name": "Peter Hunt",
+    "email": "naseberry@users.noreply.github.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/naseberry/another-markdown-editor/issues"
@@ -24,6 +32,7 @@
   "homepage": "https://github.com/naseberry/another-markdown-editor#readme",
   "devDependencies": {
     "electron": "^2.0.3",
-    "simplemde": "^1.11.2"
+    "electron-packager": "^11.2.0",
+    "npm-run-all": "^4.1.3"
   }
 }
